--- a/djangoProject/dashboard/templates/dashboard/base.html
+++ b/djangoProject/dashboard/templates/dashboard/base.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     {% block title %}{% endblock title %}
-    
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 
     <link rel="stylesheet" href="{% static 'dashboard/main.css' %}">
@@ -20,7 +20,7 @@
     <section id="menu">
       <div class="logo">
         <img src="{% static 'dashboard/tax.jpg' %}">
-        <h2>Project X</h2>
+        <h2>Team - H</h2>
       </div>
 
       <div class="items">
@@ -43,6 +43,15 @@
           <i class="gg-profile"></i>
         </div>
       </div>
+      {% if messages %}
+      {% for message in messages %}
+      <div class="message" style="padding:100px 300px 0px 300px">
+      <div class="alert alert-{{ message.tags }}">
+        {{ message }}
+      </div>
+      </div>
+      {% endfor %}
+      {% endif %}
       {% block content %}{% endblock %}
     </section>
 
